core/static/assets/style/laec-v2.css
:root {
    --aec_violet: #3F2682;
    --aec_red: #F53B3B;
    --aec_white: #FFFFFF;
    --ligne: 0;
}

.violet-underline {
    color: var(--aec_violet);
    font-weight: bold;
}

.red-underline {
    color: var(--aec_red);
    font-weight: bold;
}

@font-face {
    font-family: 'Apotek Comp';
    src: url("../fonts/ApotekComp-Light.woff2") format("woff2"), url("../fonts/ApotekComp-Light.woff") format("woff");
    font-weight: 300;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Apotek Comp';
    src: url("../fonts/ApotekComp-Medium.woff2") format("woff2"), url("../fonts/ApotekComp-Medium.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

@font-face {
    font-family: 'Apotek Comp';
    src: url("../fonts/ApotekComp-Regular.woff2") format("woff2"), url("../fonts/ApotekComp-Regular.woff") format("woff");
    font-weight: 500;
    font-style: normal;
    font-display: swap;
}

body {
    padding-top: 0;
}

.woa {
    animation: letter-effect 10s 0s ease-in-out infinite;
}

.jumbotron h1 span:nth-child(1) {
    animation-delay: 0s;
}

.jumbotron h1 span:nth-child(2) {
    animation-delay: 200ms;
}

.jumbotron h1 span:nth-child(4) {
    animation-delay: 400ms;
}

.jumbotron h1 span:nth-child(6) {
    animation-delay: 600ms;
}

#resultats a.resultat {
  text-decoration:none;
}





@keyframes letter-effect {
    0% {
        color: var(--aec_white);
        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
    }

    80% {
        color: var(--aec_white);
        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
    }

    90% {
        color: var(--aec_violet);
        -webkit-text-stroke: 1px rgba(255, 255, 255, 0.8);
    }

    100% {
        color: var(--aec_white);
        -webkit-text-stroke: 1px rgba(255, 255, 255, 0);
    }
}

.jumbotron {
    padding-top: 100px !important;
    padding-bottom: 50px !important;
}

.jumbotron.newhome .jumbotron {
    padding-top: 0 !important;
    padding-bottom: 0 !important;
}

/* .wrap-all-visible-v2 .navbar {
    transition: background 600ms ease-in-out;
}

.wrap-all-visible-v2 .navbar-default {
    background: #f8f8f844;
    border-color: #e7e7e744;
} */

.wrap-all-visible-v2 .navbar-default {
    background: linear-gradient(105deg, rgba(245, 59, 59, 1) 0%, rgba(63, 38, 130, 1) 25%, rgba(63, 38, 130, 1) 100%);
}

/* .wrap-all-visible-v2 .navbar-default.enabled {
    animation: header-anim 350ms ease-in-out forwards;
}

@keyframes header-anim {
    from {
        background: #f8f8f844;
    }
    to {
        background: linear-gradient(105deg, rgba(245, 59, 59, 1) 0%, rgba(63, 38, 130, 1) 25%, rgba(63, 38, 130, 1) 100%);
    }
} */

.navbar-default .navbar-nav>li>a {
    color: var(--aec_white);
}

.navbar-default .navbar-nav>li>a:hover {
    color: var(--aec_white);
}

.navbar-default .navbar-nav>li {
    position: relative;
    color: var(--aec_white);
}

.navbar-default .navbar-nav>li:hover {
    background-color: rgba(255, 255, 255, 0.199);
}

.wrap-all-visible-v2 {
    position: relative;
    background-color: var(--aec_violet);
}

#searchbox {
    border-top-left-radius: 20px;
    border-bottom-left-radius: 20px;
    box-shadow: inset 0px 4px 20px rgba(0, 0, 0, 0.25);
    padding: 0 30px;
    font-size: 14px;
}

#searchbox::-webkit-input-placeholder {
    font-size: 14px;
}

.navbar-searchbox-form .input-group {
    max-width: 100% !important;
}


.navbar-searchbox-form [type=submit]:hover {
    color: var(--aec_red);
}

.wrap-container-main:not(.newhome) {
    position: relative;
    overflow: visible !important;
    overflow-x: hidden;
    box-shadow: none;
    padding-bottom: 0 !important;
}

.wrap-container-main:not(.newhome)::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    height: 30px;
    transform: translateY(-30px);
    background-image: url('../svg/wave.svg');
    background-position: center;
    background-size: 100% 30px;
    background-repeat: no-repeat;
}

.aside-content-container {
    position: sticky;
    top: 0;
}

.page-index .jumbotron {
    position: relative;
    background-image: none;
    overflow: hidden;
    z-index: 0;
    min-height: calc(100vh + 50px);
}

.page-index .jumb-bg {
    position: absolute;
    top: 0;
    bottom: 0;
    left: 0;
    right: 0;
    width: 100%;
    padding-bottom: 40px;
    /* background-color: blue; */
}

.page-index .jumb-bg svg.left {
    position: absolute;
    right: 0;
    left: 0;
}

.page-index .jumb-bg svg {
    position: absolute;
    right: 0;
    left: 50%;
    transform: translateX(-50%);
}

.page-index .jumb-bg svg path {
    stroke-dasharray: 1000;
    stroke-dashoffset: 1000;
    animation: dash 5s linear infinite;
}

@keyframes dash {
    0% {
        stroke-dashoffset: 1000;
    }

    100% {
        stroke-dashoffset: -1000;
    }
}

.page-index .jumb-bg svg.right {
    position: absolute;
    right: 0;
    left: 100%;
}

.page-index .jumb-bg svg.glass {
    position: absolute;
    right: 0;
    left: 50%;
    transform: translateX(-50%);
}

.page-index .jumbotron::before {
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    height: 300%;
    width: 70%;
    background-color: red;
    background: radial-gradient(at top left, rgba(245, 59, 59, 0.7) 0%, rgba(63, 38, 130, 1) 25%, rgba(63, 38, 130, 1) 100%);
    background-position: top left;
    z-index: -1;
}

.page-index .jumbotron::after {
    content: "";
    position: absolute;
    right: 0;
    bottom: 0;
    height: 150%;
    width: 30%;
    background-color: red;
    background: radial-gradient(at bottom right, rgba(245, 59, 59, 0.2) 0%, rgba(63, 38, 130, 0.5) 40%, rgba(63, 38, 130, 0.9) 100%);
    background-position: bottom right;
    z-index: -2;
}

.page-index .jumbotron .container {
    position: relative;
    z-index: 1;
}
/* ... */

